# erp-koten

./: .gitignore  Cargo.toml  package.json
assets/scripts/: cadunico-form.js  cadunico-form.test.js  cadunico-list.js  cadunico-list.test.js
assets/styles/: app.css
docs/plans/: 2026-03-04-cadunico-design.md  2026-03-04-cadunico-implementation.md  2026-03-04-cadunico-list-design.md  2026-03-04-cadunico-list-fixes-design.md  2026-03-04-cadunico-list-fixes.md  2026-03-04-cadunico-persistence-design.md  2026-03-04-cadunico-sqlx-persistence.md  2026-03-06-cadunico-global-ui-design.md  2026-03-06-cadunico-global-ui-implementation.md
migrations/: 20260304130000_create_cadunico.sql
src/: app.rs  lib.rs  main.rs  state.rs
src/modules/: mod.rs
src/modules/cadunico/: errors.rs  forms.rs  mod.rs  repository.rs  routes.rs  service.rs  templates.rs
templates/cadunico/: _delete_dialog.html  _list.html  create.html  error_modal.html  index.html
templates/layouts/: app.html
tests/: cadunico_routes.rs
