[package]
name = "erp-koten"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = { version = "0.8", features = ["form", "macros"] }
dotenvy = "0.15"
form_urlencoded = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
